Add Steemit Post Statistics

--- a/stenx/steem-shares.html
+++ b/stenx/steem-shares.html
@@ -23,7 +23,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td colspan="2"><img src="../img/icon/spinner.gif" style="margin-top:-5px;" />데이터 가져오는 중...</td>
+					<td colspan="2"><img src="../img/icon/spinner-sm.svg" style="margin-top:-5px;" />데이터 가져오는 중...</td>
 				</tr>
 			</tbody>
 		</table>
