--- a/t2dm-calculator/index.html
+++ b/t2dm-calculator/index.html
@@ -46,23 +46,23 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="form-validation">
-                                    <form class="form-valide" action="https://aha.indicoebm.com/api/RiskCalculatorManager/GetBaselineRiskResult" method="post">
+                                    <form class="form-valide" id="form">
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label">Gender</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <label class="radio-inline mr-3"><input type="radio" name="Gender" value="M"> Male</label>
                                                 <label class="radio-inline mr-3"><input type="radio" name="Gender" value="F"> Female</label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="age">Age</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <input type="text" class="form-control" id="age" name="age" placeholder="40-79">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="Race">Race</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <select class="form-control" id="Race" name="Race">
                                                     <option value="">Please select</option>
                                                     <option value="AA">African American</option>
@@ -78,56 +78,61 @@
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="TotalCholestrol">Total Cholesterol</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <input type="text" class="form-control" id="TotalCholestrol" name="TotalCholestrol" placeholder="130-320">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="LDLCholestrol">LDL Cholesterol</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <input type="text" class="form-control" id="LDLCholestrol" name="LDLCholestrol" placeholder="30-300">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="HDLCholestrol">HDL Cholesterol</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <input type="text" class="form-control" id="HDLCholestrol" name="HDLCholestrol" placeholder="20-100">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="TreatmentwithStatin">Treatment with Statin</label>
                                             <div class="col-lg-8">
-                                                <input type="checkbox" class="css-control-input" id="TreatmentwithStatin" name="TreatmentwithStatin" value="true">
+                                                <label class="radio-inline mr-3"><input type="radio" name="TreatmentwithStatin" value="true"> Yes</label>
+                                                <label class="radio-inline mr-3"><input type="radio" name="TreatmentwithStatin" value="false" checked> No</label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="SystolicBloodPressure">Systolic Blood Pressure</label>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-8">
                                                 <input type="text" class="form-control" id="SystolicBloodPressure" name="SystolicBloodPressure" placeholder="90-200">
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="TreatmentforHypertension">Treatment For Hypertension</label>
                                             <div class="col-lg-8">
-                                                <input type="checkbox" class="css-control-input" id="TreatmentforHypertension" name="TreatmentforHypertension" value="true">
+                                                <label class="radio-inline mr-3"><input type="radio" name="TreatmentforHypertension" value="true"> Yes</label>
+                                                <label class="radio-inline mr-3"><input type="radio" name="TreatmentforHypertension" value="false" checked> No</label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="HistoryofDiabetes">History Of Diabetes</label>
                                             <div class="col-lg-8">
-                                                <input type="checkbox" class="css-control-input" id="HistoryofDiabetes" name="HistoryofDiabetes" value="true">
+                                                <label class="radio-inline mr-3"><input type="radio" name="HistoryofDiabetes" value="true"> Yes</label>
+                                                <label class="radio-inline mr-3"><input type="radio" name="HistoryofDiabetes" value="false" checked> No</label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="CurrentSmoker">Current Smoker</label>
                                             <div class="col-lg-8">
-                                                <input type="checkbox" class="css-control-input" id="CurrentSmoker" name="CurrentSmoker" value="true">
+                                                <label class="radio-inline mr-3"><input type="radio" name="CurrentSmoker" value="true"> Yes</label>
+                                                <label class="radio-inline mr-3"><input type="radio" name="CurrentSmoker" value="false" checked> No</label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-4 col-form-label" for="AspirinTherapy">Aspirin Therapy</label>
                                             <div class="col-lg-8">
-                                                <input type="checkbox" class="css-control-input" id="AspirinTherapy" name="AspirinTherapy" value="true">
+                                                <label class="radio-inline mr-3"><input type="radio" name="AspirinTherapy" value="true"> Yes</label>
+                                                <label class="radio-inline mr-3"><input type="radio" name="AspirinTherapy" value="false" checked> No</label>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -136,6 +141,7 @@
                                             </div>
                                         </div>
                                     </form>
+                                    <div id="message" class="alert alert-danger collapse"></div>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +182,27 @@
 
     <script src="./plugins/validation/jquery.validate.min.js"></script>
     <script src="./plugins/validation/jquery.validate-init.js"></script>
+    <script>
+        $('form').submit(function(e) {
+            e.preventDefault();
+            
+            const url = 'https://aha.indicoebm.com/api/RiskCalculatorManager/GetBaselineRiskResult';
 
+            $.post(url, $('#form').serialize(), function(data) {
+                if(data.status === 'Success') {
+                    const baselineRisk = data.baselineRisk;
+                    const riskScoreComment = data.riskScoreComment;
+
+                    $('#message').html(`<h1>${baselineRisk}</h1>${riskScoreComment}`).show();
+                }
+                else {
+                    const message = data.message;
+
+                    $('#message').text(message).show();
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
