--- a/t2dm-calculator/index.html
+++ b/t2dm-calculator/index.html
@@ -51,7 +51,14 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
-                        <h2>Enovant CV Risk Calculator</h2>
+	                    <div class="eno-cal-title">	
+	                    	<div class="eno-logo">
+		                    <img src="images/CI-Enovant-Technologies.svg" >
+	                    	</div>
+							<div class="eno-page-title">
+							<h2>CV Risk Calculator</h2>
+	                    	</div>
+	                    </div>	
                         <div class="card">
                             <div class="card-body">
                                 <div class="default-tab">
